--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,14 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   smooth_page_indicator: ^1.1.0
   google_fonts: ^6.1.0
-
+  english_words: ^4.0.0
+  table_calendar: ^3.1.0
+  firebase_core: ^2.27.0
+  animated_text_kit: ^4.2.2
+  ff_navigation_bar_plus: ^0.1.5
+  styled_widget: ^0.4.1
+  delayed_display: ^2.0.0
+  avatar_glow: ^3.0.1
 
 
 dev_dependencies:
@@ -91,12 +98,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: MochiyPopPOne
+       fonts:
+         - asset: assets/fonts/MochiyPopPOne-Regular.ttf
+           weight: 300
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
